--- a/index.html
+++ b/index.html
@@ -43,7 +43,78 @@
         </div>
       </section>
     </header>
-    <main></main>
+    <main>
+      <section class="brand_logo_container">
+        <img src="assets/logos/Alibaba.svg" alt="" />
+        <img src="assets/logos/Amazon.svg" alt="" />
+        <img src="assets/logos/Daraz.pk Logo.svg" alt="" />
+        <img src="assets/logos/Ebay.svg" alt="" />
+        <img src="assets/logos/Rakuten.svg" alt="" />
+        <img src="assets/logos/Target.svg" alt="" />
+        <img src="assets/logos/Walmart.svg" alt="" />
+      </section>
+      <section>
+        <div class="collection_container">
+          <h3 class="collection_heading">Popular Collection</h3>
+          <div class="collection_product_container">
+            <div class="collection_product">
+              <img src="assets/images/action.png" alt="" />
+              <h3 class="collection_product_heading">Action Camera</h3>
+              <h3 class="collection_product_price">$380.00</h3>
+              <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
+            <div class="collection_product">
+              <img src="assets/images/airpod.png" alt="" />
+              <h3 class="collection_product_heading">Airbuds</h3>
+              <h3 class="collection_product_price">$100.00</h3>
+              <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
+            <div class="collection_product">
+              <img src="assets/images/camera.png" alt="" />
+              <h3 class="collection_product_heading">Vlogging Camera</h3>
+              <h3 class="collection_product_price">$1800.80</h3>
+              <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
+            <div class="collection_product">
+              <img src="assets/images/drone.png" alt="" />
+              <h3 class="collection_product_heading">Drone</h3>
+              <h3 class="collection_product_price">$980.25</h3>
+              <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
+            <div class="collection_product">
+              <img src="assets/images/lights.png" alt="" />
+              <h3 class="collection_product_heading">Light Setup</h3>
+              <h3 class="collection_product_price">$1200.00</h3>
+              <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
+            <div class="collection_product">
+              <img src="assets/images/mic.png" alt="" />
+              <h3 class="collection_product_heading">Microphone</h3>
+              <h3 class="collection_product_price">$120.25</h3>
+              <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
+            <div class="collection_product">
+              <img src="assets/images/setup.png" alt="" />
+              <h3 class="collection_product_heading">Photoshoot set</h3>
+              <h3 class="collection_product_price">$820.40</h3>
+              <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
+            <div class="collection_product">
+              <img src="assets/images/single-light.png" alt="" />
+              <h3 class="collection_product_heading">Green Screen</h3>
+              <h3 class="collection_product_price">$25.48</h3>
+              <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
+            <div class="collection_product">
+              <img src="assets/images/tripod.png" alt="" />
+              <h3 class="collection_product_heading">Flex Tripod</h3>
+              <h3 class="collection_product_price">$50.48</h3>
+              <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
